--- a/berns_vazirani_algorithm.ipynb
+++ b/berns_vazirani_algorithm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "source": [
     "from qiskit import *\r\n",
     "%matplotlib inline\r\n",
@@ -13,9 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "source": [
-    "secretnumber = '101010101110010100010100111'\r\n",
+    "secretnumber = '1010'\r\n",
     "n =  len(secretnumber)"
    ],
    "outputs": [],
@@ -23,11 +23,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "source": [
     "circuit = QuantumCircuit(n+1, n)\r\n",
     "\r\n",
-    "#circuit.h([0,1,2,3,4,5])\r\n",
     "circuit.h(range(n))\r\n",
     "circuit.x(n)\r\n",
     "circuit.h(n)\r\n",
@@ -46,25 +45,55 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<qiskit.circuit.instructionset.InstructionSet at 0x2a251a375e0>"
+       "<qiskit.circuit.instructionset.InstructionSet at 0x20e6c1acc70>"
       ]
      },
      "metadata": {},
-     "execution_count": 70
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "source": [
     "simulator = Aer.get_backend('qasm_simulator')\r\n",
     "result = execute(circuit, backend = simulator, shots = 1).result()\r\n",
     "counts = result.get_counts()\r\n",
     "print(counts)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'1010': 1}\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "IBMQ.load_account()\r\n",
+    "provider = IBMQ.get_provider('ibm-q')\r\n",
+    "qcomp = provider.get_backend('ibmq_santiago')\r\n",
+    "job = execute(circuit, backend=qcomp)\r\n",
+    "from qiskit.tools.monitor import job_monitor\r\n",
+    "job_monitor(job)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "ibmqfactory.load_account:WARNING:2021-07-17 16:26:06,923: Credentials are already in use. The existing account in the session will be replaced.\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
